--- a/src/components/custom_button/custom_button.scss
+++ b/src/components/custom_button/custom_button.scss
@@ -9,14 +9,23 @@
   background-color: black;
   color: white;
   text-transform: uppercase;
-  font-family: "Open Sans Condensed";
-  font-weight: bolder;
+  font-weight: lighter;
   border: none;
   cursor: pointer;
+  margin: 0 10px;
 
   &:hover {
-    background-color: white;
+    background-color: grey;
     color: black;
     border: 1px solid black;
+  }
+  &.google__login {
+    background-color: blue;
+    color: white;
+
+    &:hover {
+      background-color: indigo;
+      border: none;
+    }
   }
 }
