--- a/src/components/sign_in/sign_in.scss
+++ b/src/components/sign_in/sign_in.scss
@@ -1,9 +1,14 @@
 .sign_in {
-  width: 40vh;
+  width: 380px;
   display: flex;
   flex-direction: column;
 
   .title {
     margin: 10px 0;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
   }
 }
